1、完成发布新作业 2、完成部分样式修改